--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,8 @@
 
   </div>
 
+  <div class="footer"></div>
+
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls-0.11.2.js"></script>
